--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("A1Zs33WiuGDuR3oV-");
+   })();
+</script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
